<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".DetailActivity">

    <ImageButton
        android:id="@+id/search_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/search_for_your_stuff"
        android:src="@drawable/search_button" />
    <ImageButton
        android:id="@+id/cart_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintRight_toLeftOf="@+id/search_button"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/check_your_cart"
        android:src="@drawable/cart_button" />
    <ImageButton
        android:id="@+id/help_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintRight_toLeftOf="@+id/cart_button"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/we_won_t_respond"
        android:src="@drawable/help_button" />
    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textSize="40sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_button"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        />

    <ImageView
        android:id="@+id/temp_menu"
        android:layout_width="411dp"
        android:layout_height="65dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/menu_to_click"
        android:src="@drawable/temp_menu_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/please_buy_anything_we_beg_you"
        app:layout_constraintTop_toBottomOf="@+id/title_textview"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="16dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintLeft_toLeftOf="@+id/temp_hotsale_image"
                app:cardElevation="8dp">

        <ImageView
            android:id="@+id/temp_hotsale_image"
            android:layout_width="370dp"
            android:layout_height="200dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:contentDescription="@string/we_sell_this_cheaper_now"
            android:src="@drawable/temp_hotsale_image" />

            </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="16dp"
                android:layout_width="170dp"
                android:layout_height="200dp"
                app:layout_constraintLeft_toLeftOf="@+id/temp_hotsale_image"
                app:cardElevation="8dp">
            <ImageView
                android:id="@+id/laptops_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/laptops_for_dayz"
                android:src="@drawable/laptop_button" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="30dp"
                app:cardCornerRadius="16dp"
                android:layout_width="170dp"
                android:layout_height="200dp"

                app:layout_constraintRight_toRightOf="@+id/temp_hotsale_image"
                app:layout_constraintBottom_toBottomOf="parent"

                app:cardElevation="8dp">
            <ImageView
                android:id="@+id/plansheti_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/plansheti_for_dayz"
                android:src="@drawable/plansheti_button" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="16dp"
                    android:layout_width="170dp"
                    android:layout_height="200dp"
                    app:layout_constraintLeft_toLeftOf="@+id/temp_hotsale_image"
                    app:cardElevation="8dp">
                    <ImageView
                        android:id="@+id/smartphones_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/smartphonez_for_dayz"
                        android:src="@drawable/laptop_button" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_marginStart="30dp"
                    app:cardCornerRadius="16dp"
                    android:layout_width="170dp"
                    android:layout_height="200dp"

                    app:layout_constraintRight_toRightOf="@+id/temp_hotsale_image"
                    app:layout_constraintBottom_toBottomOf="parent"

                    app:cardElevation="8dp">
                    <ImageView
                        android:id="@+id/wearables_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/wearablez_for_dayz"
                        android:src="@drawable/plansheti_button" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>